--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -1541,10 +1541,10 @@
  russia.32.o1: "Sure!"
  russia.32.o2: "Russians Stay Away!"
  russia.38.t: "[FROM.GetName] Agrees on Economic Cooperation!"
- russia.38.d: "[FROM.GetName] has sent an affirmative responce to our investment proposal! It is a great day for both of our countries!"
+ russia.38.d: "[FROM.GetName] has sent an affirmative response to our investment proposal! It is a great day for both of our countries!"
  russia.38.o1: "Excellent."
  russia.39.t: "[FROM.GetName] Declines the Economic Cooperation!"
- russia.39.d: "[FROM.GetName] has sent an negative responce to our investment proposal! It stops us from continuation of this project."
+ russia.39.d: "[FROM.GetName] has sent an negative response to our investment proposal! It stops us from continuation of this project."
  russia.39.o1: "Sad"
  russia.40.t: "Take the Sahel Confederation Under Direct Control"
  russia.40.d: "I think we should personally monitor the process."
@@ -2221,7 +2221,7 @@
 
  ## NPP Events
  russia.26.t: "National Projects Initiative is failed!"
- russia.26.d: "Latest report from our Ministry of Economy shows that we did not meet the goal for National Projects. It is undoubtedly a great damage for our international reputation and the trust for the government inside our country. What will be our responce to this national shame?"
+ russia.26.d: "Latest report from our Ministry of Economy shows that we did not meet the goal for National Projects. It is undoubtedly a great damage for our international reputation and the trust for the government inside our country. What will be our response to this national shame?"
  russia.26.o1: "Manipulate the facts. Stability is our priority."
  russia.26.o2: "Admit that we have failed."
  russia.27.t: "National Project Initiative is a success!"
