--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -40,7 +40,7 @@
  SER_mafia_concessions: "§YMafia§! Concessions"
  SER_mafia_concessions_desc: "Making concessions to the mafia will allow us to win them to our side."
  SER_utilize_mafia: "§RUtilize§! the Mafia"
- SER_utilize_mafia_desc: "We can contact the mafia and ask them to do some of the diry work for us.."
+ SER_utilize_mafia_desc: "We can contact the mafia and ask them to do some of the dirty work for us.."
  SER_russian_involvement: "[SOV.GetFlag]§YRussian§! Involvement"
  SER_russian_involvement_desc: "Some elements in the Russian government are more than happy to lend us a hand in curbing this resistance movement."
  SER_choke_the_media: "§RChoke§! the Media"
