--- a/localisation/braz_por/MD_focus_SPR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SPR_l_braz_por.yml
@@ -717,7 +717,6 @@
  SPR_endorse_eu_regulations: "Aprovar os regulamentos da UE"
  SPR_endorse_eu_regulations_desc: "Endossar e apoiar os regulamentos da União Europeia será um grande benefício para nossa conexão com o resto da Europa."
  SPR_nuclear_acceptance_campaign: "Campanha de aceitação nuclear"
- SPR_nuclear_acceptance_campaign_sec: "Lutar contra a oposição nuclear pode fazer a bola rolar para nossa iniciativa verde. No final, quem se beneficia com isso é o povo da Espanha."
  SPR_Armonia_con_la_naturaleza: "Harmonia com a natureza"
  SPR_Armonia_con_la_naturaleza_desc: "Vamos fazer com que as pessoas queiram preservar a natureza de suas nações. Se a estamos saqueando, não teremos uma Espanha natural."
  SPR_economia_espanola: "Economia Espanhola"
@@ -1848,3 +1847,4 @@
  canarians_loc: "Canárias"
  SPR_decommodify_the_basics_idea: "Descomodifique o básico"
  SPR_decommodify_the_basics_idea_desc: "O básico não deve ser considerado uma mercadoria. É básico e deve ser tratado como tal."
+ SPR_nuclear_acceptance_campaign_desc: "Lutar contra a oposição nuclear pode fazer a bola rolar para nossa iniciativa verde. No final, quem se beneficia disso é o povo da Espanha."
