--- a/localisation/french/MD_focus_SUB_l_french.yml
+++ b/localisation/french/MD_focus_SUB_l_french.yml
@@ -77,7 +77,7 @@
  SUB_reform_army: "Standards of the Russian Army"
  SUB_reform_army_desc: "We will finally adopt the standards of the Russian Army"
  TAT_tatneft: "Investments With Tatneft"
- TAT_tatneft_desc: "We are investing more funds in Tatneft to get a greater inflow of resourses"
+ TAT_tatneft_desc: "We are investing more funds in Tatneft to get a greater inflow of resources"
  SUB_z_propaganda: "Z Propaganda"
  SUB_aggresive_foriegn_policy_putin_idea: "Aggressive Foreign Policy"
  SUB_military_exercises_allied_resolve_idea: "Allied Determination — exercises"
@@ -287,8 +287,6 @@
  TAT_western_sport_desc: "Healthy nation! - A strong nation!"
  TAT_western_ciphrovisation: "Global Digitalization"
  TAT_western_ciphrovisation_desc: "Digitalization will strengthen the growth of our economy"
- TAT_western_resourse: "Alternative Energy Resources"
- TAT_western_resourse_desc: "We will develop alternative energy resources"
  TAT_western_liberal_heaven: "Tatarstan Liberal Showcase"
  TAT_western_liberal_heaven_desc: "We are an example of building a liberal state on the territory of Russia"
  TAT_Communism_start: "The Return of Communism"
@@ -2530,3 +2528,5 @@
  SUB_volunteer_syria_idea_desc: "The subject, by order of the Federal Government, sends volunteers to the country that the leadership has found it necessary to protect"
  SUB_volunteer_dpr_idea: "Military Intervention Campaign in §Y[DPR.GetNamewithFlag]§!"
  SUB_volunteer_dpr_idea_desc: "The subject, by order of the Federal Government, sends volunteers to the country that the leadership has found it necessary to protect"
+ TAT_western_resource: "Alternative Energy Resources"
+ TAT_western_resource_desc: "We will develop alternative energy resources"
