--- a/localisation/polish/MD_focus_CES_l_polish.yml
+++ b/localisation/polish/MD_focus_CES_l_polish.yml
@@ -319,8 +319,6 @@
  CES_western_sport_desc: "Zdrowy naród! - Silny naród!"
  CES_western_ciphrovisation: "Globalna cyfryzacja"
  CES_western_ciphrovisation_desc: "Cyfryzacja wzmocni rozwój naszej gospodarki"
- CES_western_resourse: "Alternatywne źródła energii"
- CES_western_resourse_desc: "Będziemy rozwijać alternatywne źródła energii"
  CES_western_liberal_heaven: "Prezentacja liberałów z Azji Środkowej"
  CES_western_liberal_heaven_desc: "Jesteśmy przykładem budowania liberalnego państwa na terenie Azji Centralnej"
  CES_liberals_modifier: "Demokracja środkowoazjatycka"
@@ -1291,3 +1289,5 @@
  CES_economic_affairs_desc: "Początek XXI wieku był okresem transformacji dla krajów Azji Środkowej, które musiały zmierzyć się ze złożoną sytuacją rozwoju gospodarczego i transformacji."
  CES_enlarge_the_mines: "Powiększ kopalnie"
  CES_enlarge_the_mines_desc: "Aby rozszerzyć nasz przemysł wydobywczy, konieczna jest rozbudowa kopalni."
+ CES_western_resource: "Alternatywne źródła energii"
+ CES_western_resource_desc: "Będziemy rozwijać alternatywne źródła energii"
