--- a/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
+++ b/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
@@ -19,7 +19,7 @@
  SER_stabilization_measures: "Środki stabilizacyjne"
  SER_stabilization_measures_desc: "Aby zapewnić stabilną gospodarkę, musimy wdrożyć środki zapobiegające tworzeniu niestabilnych i słabych warunków. Wdrażajmy je już teraz, dla bezpieczeństwa naszej gospodarki."
  SER_the_castle_crumbles: "Zamek się wali"
- SER_the_castle_crumbles_desc: "\n\n\n\n\n\n£SER_desctext_milocevic\n\n\n\n\n\n\n\n\n§H[ROOT.GetLeader]§! Panowanie firmy było pełne niestabilności, brak przywództwa i mnóstwo zbrodni wojennych. §HRewolucja buldożerów§! jak niektórzy to nazywają, może zapoczątkować koniec rządów [ROOT.GetLeader] i zapoczątkować nowe „§CDmokratyczne§!” złóż zamówienie w [SER.GetFlag]§Y[SER.GetName]§!.\n\nJeśli §Rresistance§! nie zostanie stłumiony do końca października, wówczas nastąpi §HRewolucja buldożerów§! będzie działać pełną parą. §YMilošević§! będzie miał pewną kontrolę nad narodem, ale jeśli jego władza nie osiągnie §H100%§! pod koniec §Rrewolucji§!, jego czas może równie dobrze dobiec końca.\n\n £text_icon_milocevic Siła Miloševicia: §Y[?SER_milosevic_strength]§!"
+ SER_the_castle_crumbles_desc: "\n\n\n\n\n\n£SER_desctext_milocevic\n\n\n\n\n\n\n\n\n§H[ROOT.GetLeader]§! Panowanie firmy było pełne niestabilności, brak przywództwa i mnóstwo zbrodni wojennych. \n§HRewolucja buldożerów§! jak niektórzy to nazywają, może zapoczątkować koniec rządów Milošević i zapoczątkować nowe „§CDmokratyczne§!” złóż zamówienie w [SER.GetFlag]§Y[SER.GetName]§!.\n\nJeśli §Rresistance§! nie zostanie stłumiony do końca października, wówczas nastąpi §HRewolucja buldożerów§! będzie działać pełną parą. §YMilošević§! będzie miał pewną kontrolę nad narodem, ale jeśli jego władza nie osiągnie §H100%§! pod koniec §Rrewolucji§!, jego czas może równie dobrze dobiec końca.\n\n £text_icon_milocevic Siła Miloševicia: §Y[?SER_milosevic_strength]§!"
  SER_the_revolution: "§RRewolucja§!"
  SER_the_revolution_desc: "Rewolucja buldożerów będzie oznaczać koniec rządów [ROOT.GetLeader]."
  SER_negotiations: "§YNegocjacje§!"
@@ -33,7 +33,7 @@
  SER_mafia_concessions: "§YMafia§! Koncesje"
  SER_mafia_concessions_desc: "Ustępstwa wobec mafii pozwolą nam przeciągnąć ją na swoją stronę."
  SER_utilize_mafia: "§RUwykorzystuj§! Mafia"
- SER_utilize_mafia_desc: "Możemy skontaktować się z mafią i poprosić ją, aby wykonała za nas jakąś brudną robotę."
+ SER_utilize_mafia_desc: "Możemy skontaktować się z mafią i poprosić ją o wykonanie za nas brudnej roboty."
  SER_russian_involvement: "[SOV.GetFlag]§YRussian§! Uwikłanie"
  SER_russian_involvement_desc: "Niektóre elementy rosyjskiego rządu są więcej niż szczęśliwe, mogąc nam pomóc w stłumieniu tego ruchu oporu."
  SER_choke_the_media: "§RPrzedław się§! Media"
