--- a/localisation/polish/MD_focus_SPR_l_polish.yml
+++ b/localisation/polish/MD_focus_SPR_l_polish.yml
@@ -717,7 +717,6 @@
  SPR_endorse_eu_regulations: "Zatwierdzanie rozporządzeń UE"
  SPR_endorse_eu_regulations_desc: "Zatwierdzenie i wspieranie przepisów Unii Europejskiej będzie dużą korzyścią dla naszego połączenia z resztą Europy."
  SPR_nuclear_acceptance_campaign: "Kampania akceptacji energii jądrowej"
- SPR_nuclear_acceptance_campaign_sec: "Walka z opozycją nuklearną może pomóc w realizacji naszej zielonej inicjatywy. W ostatecznym rozrachunku beneficjentami tego są obywatele Hiszpanii."
  SPR_Armonia_con_la_naturaleza: "Armonia con la naturaleza"
  SPR_Armonia_con_la_naturaleza_desc: "Niech ludzie chcą chronić przyrodę swojego narodu. Jeśli będziemy ją plądrować, nie będziemy mieli naturalnej Hiszpanii."
  SPR_economia_espanola: "Ekonomia Española"
@@ -1848,3 +1847,4 @@
  canarians_loc: "Kanaryjczycy (Kanaryjczycy)"
  SPR_decommodify_the_basics_idea: "Dekomodyfikuj podstawy"
  SPR_decommodify_the_basics_idea_desc: "Podstawy nie powinny być uważane za towar. Są podstawą i powinny być traktowane jako takie."
+ SPR_nuclear_acceptance_campaign_desc: "Walka z opozycją nuklearną może wprawić w ruch naszą zieloną inicjatywę. Ostatecznie skorzystają na tym mieszkańcy Hiszpanii."
