--- a/localisation/russian/MD_focus_CES_l_russian.yml
+++ b/localisation/russian/MD_focus_CES_l_russian.yml
@@ -234,9 +234,9 @@
  CES_airbus_stuff: "Транспортные самолёты Airbus"
  CES_airbus_stuff_desc: "Мы можем заключить с компанией Airbus контракты на приобретение транспортных самолётов для нужд материально-технического обеспечения наших ВВС."
  CES_euro_helicopters: "Европейские вертолёты"
- CES_euro_helicopters_desc: "Buying the newest European helicopters will greatly benefit to our airforce."
+ CES_euro_helicopters_desc: "Закупка новейших европейских вертолетов принесет большую пользу нашим военно-воздушным силам."
  CES_czech_jets: "Чехословацкие учебные реактивные самолёты"
- CES_czech_jets_desc: "After the fall of Eastern bloc, may post-communist states sell out their retired equipment. We may need to buy them for our airforce."
+ CES_czech_jets_desc: "После падения Восточного блока, возможно, посткоммунистические государства распродадут свое списанное оборудование. Возможно, нам придется покупать его для наших ВВС."
  CES_tai_anka: "Турецкие беспилотники"
  CES_tai_anka_desc: "Турецкие беспилотники очень хорошо зарекомендовали себя в ходе последних конфликтов. Возможно, нам придётся их закупить."
  CES_bell_uh: "BELL-UH"
@@ -284,7 +284,7 @@
  CES_navy_frigates: "Фрегаты"
  CES_navy_frigates_desc: "Фрегат - это тип военного корабля. В разные эпохи роль и возможности кораблей, классифицируемых как фрегаты, несколько различались. В XVII - начале XVIII вв. фрегатом назывался любой полноповоротный корабль, обладающий высокой скоростью и маневренностью и предназначенный для выполнения функций разведчика, эскорта и патруля."
  CES_navy_doctrine: "Реформа доктрины"
- CES_navy_doctrine_desc: "Our Naval doctrine is need of renovation."
+ CES_navy_doctrine_desc: "Наша военно-морская доктрина нуждается в обновлении."
  CES_western_start: "Демократический путь"
  CES_western_start_desc: "Нашей стране пора встать на путь демократического правления"
  CES_western_reform_govern: "Правительственная реформа"
@@ -315,8 +315,6 @@
  CES_western_sport_desc: "Здоровая нация! - Сильная нация!"
  CES_western_ciphrovisation: "Глобальная цифровизация"
  CES_western_ciphrovisation_desc: "Цифровизация усилит рост нашей экономики"
- CES_western_resourse: "Альтернативные источники энергии"
- CES_western_resourse_desc: "Мы будем развивать альтернативные источники энергии"
  CES_western_liberal_heaven: "Либеральная витрина Центральной Азии"
  CES_western_liberal_heaven_desc: "Мы являемся примером построения либерального государства на территории Центральной Азии"
  CES_liberals_modifier: "Центральноазиатская демократия"
@@ -362,7 +360,7 @@
  CES_invite_lukoil: "Пригласить Лукойл"
  CES_invite_lukoil_desc: "ПАО Нефтяная компания \"Лукойл\" - российская транснациональная энергетическая корпорация со штаб-квартирой в Москве, специализирующаяся на добыче, производстве, транспортировке и продаже нефти, природного газа, нефтепродуктов и электроэнергии."
  CES_united_joint_venture: "Объединенное совместное предприятие"
- CES_united_joint_venture_desc: "We shall merge the shares and benefit from it."
+ CES_united_joint_venture_desc: "Мы объединим акции и получим от этого выгоду."
  CES_trade_idea: "Расширение торговли"
  CES_supporting_what_has_left: "Поддержка того, что осталось"
  CES_supporting_what_has_left_desc: "Наша экономика была сломана после развала Советского Союза, теперь пришло время поддержать то, что осталось после этого"
@@ -373,9 +371,9 @@
  centrasiaev.1.t: "Переговоры о поддержке Азиатского банка"
  centrasiaev.1.d: "Азиатский банк принял наше предложение о поддержке. Теперь нам нужно выбрать, о чем их просить"
  centrasiaev.1.a: "Поддержка образования"
- centrasiaev.1.b: "Economic Support"
+ centrasiaev.1.b: "Экономическая поддержка"
  centrasiaev.1.c: "Социальная поддержка"
- CES_industry_focus_idea: "Economic Support From ADB"
+ CES_industry_focus_idea: "Экономическая поддержка от АБР"
  CES_education_focus_idea: "Поддержка образования со стороны АБР"
  CES_social_focus_idea: "Социальная поддержка со стороны АБР"
  CES_national_invest_strategy: "Национальная инвестиционная стратегия"
@@ -394,7 +392,7 @@
  centrasiaev.4.b: "Нет, извините"
  CES_special_economic_zones: "Особые экономические зоны"
  CES_special_economic_zones_desc: "Центральная Азия признает необходимость создания особых экономических зон (ОЭЗ) для стимулирования экономического развития. Эти зоны предлагают такие стимулы, как налоговые льготы, снижение уровня регулирования и упрощение административных процессов для привлечения отечественных и иностранных инвестиций. В Центральной Азии ОЭЗ служат катализатором диверсификации экономики, стимулирования инноваций и создания рабочих мест, особенно в таких отраслях, как производство, технологии и торговля. Создавая благоприятные условия для ведения бизнеса, эти зоны играют ключевую роль в усилиях региона по привлечению инвестиций, развитию инфраструктуры и стимулированию экономического роста"
- CES_infr_investment: "Infrastructure Investments"
+ CES_infr_investment: "Инвестиции в инфраструктуру"
  CES_infr_investment_desc: "Центральная Азия уделяет приоритетное внимание инфраструктурным инвестициям, направленным на модернизацию и расширение транспортных, энергетических и телекоммуникационных сетей. Эти инвестиции играют важную роль в обеспечении связи между различными странами региона и содействии торговле и связям с соседними государствами"
  CES_industrial_revival: "Промышленное возрождение"
  CES_industrial_revival_desc: "Инвестиции в промышленность в Центральной Азии являются важнейшими факторами экономического роста в регионе. Эти инвестиции направлены на развитие различных секторов, таких как обрабатывающая промышленность, энергетика, технологии и инфраструктура. Они играют ключевую роль в повышении производительности труда, создании новых рабочих мест и повышении конкурентоспособности региона на мировой арене. Центральная Азия активно ищет отечественные и иностранные промышленные инвестиции для использования своего экономического потенциала и содействия региональному развитию, что делает ее одним из ключевых направлений деятельности как правительств, так и частных предприятий региона"
@@ -414,7 +412,7 @@
  CES_attract_tourists: "Привлекать туристов"
  CES_attract_tourists_desc: "Привлекать туристов"
  CES_special_gambling_regions: "Специальные игорные регионы"
- CES_special_gambling_regions_desc: "Our minister of Economy proposed special gambling regions project to increase our economy."
+ CES_special_gambling_regions_desc: "Наш министр экономики предложил проект создания специальных игорных регионов для роста нашей экономики."
  CES_russian_it_specialists: "Российские IT-шники"
  CES_russian_it_specialists_desc: "Российские IT-шники ищут новое место для размещения своих компаний. Наша страна - идеальное место для этого!"
  CES_agricultural_reneissance: "Возрождение сельского хозяйства"
@@ -1287,7 +1285,9 @@
  UZB_karakalpakstan.4.a: "Вернуть каракалпаков"
  UZB_karakalpakstan.4.b: "Вернуть узбеков"
  Karakalpaks_rebelled_yes: "Каракалпакстан восстал"
- CES_economic_affairs: "Economic Affairs"
- CES_economic_affairs_desc: "The early 2000s marked a transformative period for Central Asian countries as they navigate the complex landscape of economic development and transition."
- CES_enlarge_the_mines: "Enlarge The Mines"
- CES_enlarge_the_mines_desc: "Enlarging mines is needed to expand our mining industry."
+ CES_economic_affairs: "Экономические дела"
+ CES_economic_affairs_desc: "Начало 2000-х годов стало периодом преобразований для стран Центральной Азии, которым пришлось преодолевать сложный ландшафт экономического развития и переходного периода."
+ CES_enlarge_the_mines: "Увеличить шахты"
+ CES_enlarge_the_mines_desc: "Для развития нашей горнодобывающей промышленности необходимо расширение шахт."
+ CES_western_resource: "Альтернативные источники энергии"
+ CES_western_resource_desc: "Мы будем развивать альтернативные источники энергии"
