--- a/localisation/russian/MD_focus_SPR_l_russian.yml
+++ b/localisation/russian/MD_focus_SPR_l_russian.yml
@@ -717,7 +717,6 @@
  SPR_endorse_eu_regulations: "Одобрить постановления ЕС"
  SPR_endorse_eu_regulations_desc: "Одобрение и поддержка правил Европейского Союза будет большим преимуществом для нашей связи с остальной Европой."
  SPR_nuclear_acceptance_campaign: "Кампания по принятию ядерного оружия"
- SPR_nuclear_acceptance_campaign_sec: "Борьба против ядерной оппозиции может дать толчок нашей зеленой инициативе. В конечном счете, в выигрыше от этого окажется народ Испании."
  SPR_Armonia_con_la_naturaleza: "Подружиться с природой"
  SPR_Armonia_con_la_naturaleza_desc: "Пусть люди захотят сохранить природу своей страны. Если мы будем грабить ее, то у нас не будет природной Испании."
  SPR_economia_espanola: "Испанская экономика"
@@ -1848,3 +1847,4 @@
  SPR_visited_ceuta: "Посетил Сеуту и ​​Мелилью."
  SPR_decommodify_the_basics_idea: "Декоммодифицировать основы"
  SPR_decommodify_the_basics_idea_desc: "Базовые вещи не следует считать товаром. Они являются базовыми и должны рассматриваться как таковые."
+ SPR_nuclear_acceptance_campaign_desc: "Борьба с ядерной оппозицией может сдвинуть с мертвой точки нашу зеленую инициативу. В конечном итоге, от этого выиграет народ Испании."
