--- a/localisation/russian/MD_techs_l_russian.yml
+++ b/localisation/russian/MD_techs_l_russian.yml
@@ -4264,14 +4264,14 @@
  peaceful_civilian_coersion_desc: "By working with the civilian population, and by gaining their support, we will be better supplied and equipped for our future engagements."
  violent_civilian_coersion: "Violent Civilian Coercion"
  violent_civilian_coersion_desc: "Beatings, kidnappings, and more; violent actions will quickly garner us the support we need to further fight the invaders."
- hit_and_run_raids: "Hit and Run Raids"
- hit_and_run_raids_desc: "By striking quickly, then retreating, and repeating these actions, we can maximize our combat effectiveness."
- terror_strikes: "Terror Strikes"
- terror_strikes_desc: "To make the invaders leave, we need to make everyone hate them. Conducting terror attacks, and then blaming them on the presence of the invaders, is one way to do that."
- military_base_strikes: "Military Base Strikes"
- military_base_strikes_desc: "By striking at the heart of the invaders forces, we can destroy and drive them from our country."
- propaganda_campaigns: "Propaganda Campaigns"
- propaganda_campaigns_desc: "With careful use of propaganda and communications, we can sway public opinion in our favor."
+ hit_and_run_raids: "Рейды типа «бей и беги»"
+ hit_and_run_raids_desc: "Быстро нанося удары, затем отступая и повторяя эти действия, мы можем максимально повысить нашу боевую эффективность."
+ terror_strikes: "Террористические удары"
+ terror_strikes_desc: "Чтобы заставить захватчиков уйти, нам нужно заставить всех их ненавидеть. Проведение терактов, а затем обвинение в них присутствия захватчиков — один из способов сделать это."
+ military_base_strikes: "Удары по военным базам"
+ military_base_strikes_desc: "Ударив в самое сердце сил захватчиков, мы сможем уничтожить их и изгнать из нашей страны."
+ propaganda_campaigns: "Пропагандистские кампании"
+ propaganda_campaigns_desc: "Грамотно используя пропаганду и коммуникации, мы можем склонить общественное мнение в свою пользу."
  incite_revolt: "Incite Revolt"
  incite_revolt_desc: "By getting local populations to fight alongside us, and to revolt against the invader, we can further strain their resources."
  low_level_command_initiative: "Low Level Command Initiative"
