--- a/localisation/simp_chinese/MD_focus_ABK_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ABK_l_simp_chinese.yml
@@ -9,8 +9,6 @@
  ABK_associated_state_desc: "俄罗斯准备以联系国的形式帮助成为独联体的一部分。"
  ABK_internet_akvafon: "首次接入互联网"
  ABK_internet_akvafon_desc: "互联网在全世界都在积极发展，是时候让我们在共和国内发展起来了。"
- ABK_abkhazian_resourse: "支持农民和农作物贸易"
- ABK_abkhazian_resourse_desc: "我们共和国内丰富的自然资源应得到最大限度地利用。我们准备支持我们的农民。"
  ABK_promotion_of_independence: "推动独立"
  ABK_promotion_of_independence_desc: "我们将在所有媒体上宣传我们共和国的独立性，我们的国家是可以独立存在的。"
  ABK_promotion_of_russia: "对俄友好宣传"
@@ -329,3 +327,5 @@
  ABK_history_lessons: "关注学校课程中的怀旧情绪"
  ABK_agitations: "开展宣传活动"
  abkhazia_focus: "阿布哈兹国策树"
+ ABK_abkhazian_resource: "对农民和农作物的支持"
+ ABK_abkhazian_resource_desc: "我们共和国丰富的自然遗产应得到最大限度的利用。我们已准备好支持我们的农民."
