--- a/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
@@ -303,8 +303,6 @@
  CES_western_sport_desc: "国家健康！- 一个强大的国家！"
  CES_western_ciphrovisation: "全球数字化"
  CES_western_ciphrovisation_desc: "数字化将助推我们的经济增长"
- CES_western_resourse: "新能源"
- CES_western_resourse_desc: "我们将开发新能源作为替代资源"
  CES_western_liberal_heaven: "中亚自由主义展示"
  CES_western_liberal_heaven_desc: "我们是在中亚土地上建立自由国家的典范。"
  CES_liberals_modifier: "中亚民主"
@@ -1291,3 +1289,5 @@
  CES_economic_affairs_desc: "21世纪初期，中亚国家正经历复杂的经济发展和转型时期。"
  CES_enlarge_the_mines: "扩大矿山"
  CES_enlarge_the_mines_desc: "扩大矿山是扩大我们的采矿业所必需的。"
+ CES_western_resource: "替代能源"
+ CES_western_resource_desc: "我们将开发替代能源"
