--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -99,7 +99,7 @@
  TAT_metro_tatar: "开放地铁"
  TAT_metro_tatar_desc: "我们准备好将地铁向公众开放了"
  TAT_tatneft: "投资塔特公司"
- TAT_tatneft_desc: "我们将对塔特公司投资来获得更多资源"
+ TAT_tatneft_desc: "我们正在向塔特公司投入更多资金，以获得更多的资源流入。"
  SUB_z_propaganda: "Z宣传"
  SUB_aggresive_foriegn_policy_putin_idea: "侵略性外交政策"
  SUB_military_exercises_allied_resolve_idea: "同盟决心-演习"
@@ -243,8 +243,6 @@
  TAT_western_sport_desc: "国家健康！- 一个强大的国家！"
  TAT_western_ciphrovisation: "全球数字化"
  TAT_western_ciphrovisation_desc: "数字化将助推我们的经济增长"
- TAT_western_resourse: "新能源"
- TAT_western_resourse_desc: "我们将开发新能源作为替代资源。"
  TAT_western_liberal_heaven: "鞑靼斯坦自由主义展示"
  TAT_western_liberal_heaven_desc: "我们是在俄罗斯土地上建立自由国家的典范。"
  TAT_Communism_start: "共产主义的回归"
@@ -2530,3 +2528,5 @@
  SUB_volunteer_syria_idea_desc: "根据联邦政府的命令，该主体向领导层认为需要保护的国家派遣志愿者。"
  SUB_volunteer_dpr_idea: "在§Y[DPR.GetNamewithFlag]§!的军事干预行动"
  SUB_volunteer_dpr_idea_desc: "根据联邦政府的命令，该主体向领导层认为需要保护的国家派遣志愿者。"
+ TAT_western_resource: "替代能源"
+ TAT_western_resource_desc: "我们将开发替代能源"
