--- a/localisation/braz_por/MD_focus_SUB_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SUB_l_braz_por.yml
@@ -77,7 +77,7 @@
  SUB_reform_army: "Padrões do Exército Russo"
  SUB_reform_army_desc: "Finalmente adotaremos os padrões do Exército Russo"
  TAT_tatneft: "Investimentos com Tatneft"
- TAT_tatneft_desc: "Estamos investindo mais fundos na Tatneft para obter um maior influxo de recursos"
+ TAT_tatneft_desc: "Estamos investindo mais fundos na Tatneft para obter um maior fluxo de recursos"
  SUB_z_propaganda: "Propaganda Z"
  SUB_aggresive_foriegn_policy_putin_idea: "Política Externa Agressiva"
  SUB_military_exercises_allied_resolve_idea: "Determinação Aliada — exercícios"
@@ -308,8 +308,6 @@
  TAT_western_sport_desc: "Nação saudável! - Uma nação forte!"
  TAT_western_ciphrovisation: "Digitalização Global"
  TAT_western_ciphrovisation_desc: "A digitalização fortalecerá o crescimento de nossa economia"
- TAT_western_resourse: "Recursos Energéticos Alternativos"
- TAT_western_resourse_desc: "Desenvolveremos recursos energéticos alternativos"
  TAT_western_liberal_heaven: "Exposição Liberal da Tartaristão"
  TAT_western_liberal_heaven_desc: "Somos um exemplo de construção de um estado liberal no território da Rússia"
  TAT_Communism_start: "O Retorno do Comunismo"
@@ -2530,3 +2528,5 @@
  SUB_volunteer_syria_idea_desc: "O sujeito, por ordem do Governo Federal, envia voluntários ao país que a liderança considerou necessário proteger"
  SUB_volunteer_dpr_idea: "Campanha de Intervenção Militar em §Y[DPR.GetNamewithFlag]§!"
  SUB_volunteer_dpr_idea_desc: "O sujeito, por ordem do Governo Federal, envia voluntários ao país que a liderança considerou necessário proteger"
+ TAT_western_resource: "Recursos de energia alternativa"
+ TAT_western_resource_desc: "Desenvolveremos fontes alternativas de energia"
