--- a/localisation/french/MD_focus_SER_VOJ_MNT_l_french.yml
+++ b/localisation/french/MD_focus_SER_VOJ_MNT_l_french.yml
@@ -12,32 +12,32 @@
  SER_anti_opposition_measures_desc: "La position précaire de notre gouvernement, après des événements aussi terribles, est devenue un prétexte pour l'opposition pour faire pression sur nous - nous allons nous en occuper."
  SER_demonstrative_anti_corruption_actions: "Lutte démonstrative contre la corruption"
  SER_demonstrative_anti_corruption_actions_desc: "La situation de corruption a atteint son paroxysme, mais les citoyens doivent être rassurés, nous organiserons un combat-spectacle contre les fonctionnaires corrompus que nous pourrons attraper."
- SER_peacefulize_the_plebs: "Calm Down The Plebs"
- SER_peacefulize_the_plebs_desc: "The people are in a state where a random event or the right person in the right place can start a fire of revolution, it is necessary to prevent such opportunities."
- SER_debt_reconstructuring: "Debt Restructuring"
- SER_debt_reconstructuring_desc: "Our debt has gotten far too strong a grip on us. We must handle this issue to avoid being crippled by it further down the line."
- SER_stabilization_measures: "Stabilization Measures"
- SER_stabilization_measures_desc: "To ensure a stable economy, we must put measures in place to avoid creating the environment for a shaky and weak one. Let us implement some now, for the security of our economy."
- SER_the_castle_crumbles: "The Castle Crumbles"
- SER_the_castle_crumbles_desc: "\n\n\n\n\n\n£SER_desctext_milocevic\n\n\n\n\n\n\n\n\n§H[ROOT.GetLeader]§!'s reign has been riddled with instability, lack of leadership, and a whole lot of war crimes. The §HBulldozer revolution§! as some are calling it, may spark the end of [ROOT.GetLeader]'s rule and bring about a new '§CDemocratic§!' order in [SER.GetFlag]§Y[SER.GetName]§!.\n\nIf §Rresistance§! is not quelled by late october, then the §HBulldozer revolution§! will be in full swing. §YMilošević§! will have a certain amount of control over the nation, but if his power does not reach §H100%§! by the end of the §Rrevolution§!, then his time may very well be up.\n\n £text_icon_milocevic Milošević's Strength: §Y[?SER_milosevic_strength]§!"
- SER_the_revolution: "§RThe Revolution§!"
- SER_the_revolution_desc: "The Bulldozer revolution will mark the end of [ROOT.GetLeader]'s rule.."
- SER_negotiations: "§YNegotiations§!"
- SER_negotiations_desc: "We're gonna have to call for some negotiations with some of the weaker factions protesting.."
- SER_appeal_to_nationalists: "§YAppeal§! to Nationalists"
- SER_appeal_to_nationalists_desc: "The strongest supporters of our party and ruling order are the nationalists. We will need to appease them."
- SER_suppress_dissent: "§RSuppress§! Dissent"
- SER_suppress_dissent_desc: "Some suppression of opposition movements will be necessary to get them off of the streets.."
- SER_selective_repression: "§RSelective§! Repression"
- SER_selective_repression_desc: "By taking out specific, key targets we will be able to weaken the resistance movement."
- SER_mafia_concessions: "§YMafia§! Concessions"
- SER_mafia_concessions_desc: "Making concessions to the mafia will allow us to win them to our side."
- SER_utilize_mafia: "§RUtilize§! the Mafia"
- SER_utilize_mafia_desc: "We can contact the mafia and ask them to do some of the diry work for us.."
- SER_russian_involvement: "[SOV.GetFlag]§YRussian§! Involvement"
- SER_russian_involvement_desc: "Some elements in the Russian government are more than happy to lend us a hand in curbing this resistance movement."
+ SER_peacefulize_the_plebs: "Calmez la plèbe"
+ SER_peacefulize_the_plebs_desc: "Le peuple est dans un état où un événement aléatoire ou la bonne personne au bon endroit peut déclencher un feu de révolution, il est nécessaire d'empêcher de telles opportunités."
+ SER_debt_reconstructuring: "Restructuration de la dette"
+ SER_debt_reconstructuring_desc: "Notre dette nous pèse beaucoup trop. Nous devons régler ce problème pour éviter de nous retrouver avec des problèmes à l'avenir."
+ SER_stabilization_measures: "Mesures de stabilisation"
+ SER_stabilization_measures_desc: "Pour assurer la stabilité de notre économie, nous devons mettre en place des mesures qui éviteront de créer un environnement propice à une économie fragile et faible. Mettons-en en place dès maintenant, pour la sécurité de notre économie."
+ SER_the_castle_crumbles: "Le château s'effondre"
+ SER_the_castle_crumbles_desc: "\n\n\n\n\n\n£SER_desctext_milocevic\n\n\n\n\n\n\n\n\nLe règne de §H[ROOT.GetLeader]§! a été marqué par l’instabilité, le manque de leadership et de nombreux crimes de guerre.\nLa §HRévolution du bulldozer§!, comme certains l'appellent, pourrait déclencher la fin du règne de Milošević et apporter un nouvel ordre « §CDémocratique§! » dans [SER.GetFlag]§Y[SER.GetName]§!.\n\nSi la §Rrésistance§! n’est pas réprimée d’ici fin octobre, alors la §HRrévolution du bulldozer§! battra son plein. §YMilošević§! aura un certain contrôle sur la nation, mais si son pouvoir n’atteint pas §H100%§! d’ici la fin de la §Rrévolution§!, alors son heure de gloire sera peut-être venue.\n\n£text_icon_milocevic La force de Milošević: §Y[?SER_milosevic_strength]§!"
+ SER_the_revolution: "§RLa Révolution§!"
+ SER_the_revolution_desc: "La révolution des bulldozers marquera la fin du règne de [ROOT.GetLeader]."
+ SER_negotiations: "§YNégociations§!"
+ SER_negotiations_desc: "Nous allons devoir appeler à des négociations avec certaines des factions les plus faibles qui protestent."
+ SER_appeal_to_nationalists: "§YAppel§! aux nationalistes"
+ SER_appeal_to_nationalists_desc: "Les plus fervents partisans de notre parti et de notre régime au pouvoir sont les nationalistes. Nous devons les apaiser."
+ SER_suppress_dissent: "§RRéprimer§! la dissidence"
+ SER_suppress_dissent_desc: "Il faudra réprimer dans une certaine mesure les mouvements d’opposition pour les faire disparaître des rues."
+ SER_selective_repression: "Répression §Rsélective§!"
+ SER_selective_repression_desc: "En éliminant des cibles spécifiques et clés, nous pourrons affaiblir le mouvement de résistance."
+ SER_mafia_concessions: "Concessions de la §Ymafia§!"
+ SER_mafia_concessions_desc: "Faire des concessions à la mafia nous permettra de la gagner à notre cause."
+ SER_utilize_mafia: "§RUtilisez§! la mafia"
+ SER_utilize_mafia_desc: "Nous pouvons contacter la mafia et leur demander de faire une partie du sale boulot pour nous."
+ SER_russian_involvement: "Implication [SOV.GetFlag]§Yrusse§!"
+ SER_russian_involvement_desc: "Certains éléments du gouvernement russe sont plus qu’heureux de nous donner un coup de main pour freiner ce mouvement de résistance."
  SER_choke_the_media: "§RChoke§! the Media"
- SER_choke_the_media_desc: "The Media are fueling the fires that are raging on in our nation. In order to prevent any further spread of the information, we will need to choke them of information."
+ SER_choke_the_media_desc: "Les médias attisent les flammes qui font rage dans notre pays. Pour empêcher toute nouvelle propagation de l'information, nous devons les étouffer."
  SER_constitutional_manipulation: "§YConstitutional§! Manipulation"
  SER_constitutional_manipulation_desc: "We're gonna need to manipulate the constitution a little to give us some loopholes to keep our party in power"
  SER_divisionary_tactics: "§YDivisionary§! Tactics"
@@ -62,9 +62,9 @@
  SER_plebs_idea: "Measures To Calm The Plebs"
  SER_antiopposition_activity_idea: "Anti-Opposition Struggle"
  SER_demonstrative_anticorrup_idea: "Demonstrative Fight Against Corruption"
- SER_stable_measure: "Stabilization Measures"
+ SER_stable_measure: "Mesures de stabilisation"
  SER_stable_measure_desc: "Dishing out money to keep the people under control."
- SER_debt_reconstructure: "Debt Restructuring"
+ SER_debt_reconstructure: "Restructuration de la dette"
  SER_debt_reconstructure_desc: "To help control our debt situation, we are buying time by assuring those we owe and asking for lower interest rates temporarily to make the process of paying back easier."
  SER_milosevic_stays: "§YSlobodan Milošević does not leave office after the 2000 elections§!"
  SER_milosevic_leaves: "§YSlobodan Milošević leaves office after the 2000 elections§!"
