--- a/localisation/russian/replace/replaced_from_focus_filter_tag_l_russian.yml
+++ b/localisation/russian/replace/replaced_from_focus_filter_tag_l_russian.yml
@@ -111,3 +111,6 @@
  FOCUS_FILTER_ISRPALSTUFF: "Израиль-Палестина"
  FOCUS_FILTER_ISRPOLICE: "Полиция Израиля"
  FOCUS_FILTER_ISRECON: "Экономика Израиля"
+ FOCUS_FILTER_URAL_TRANSFORMATION: "Transformation of Ural"
+ FOCUS_FILTER_URAL_RNE: "Russian National Unity"
+ FOCUS_FILTER_URAL_MONARCHY: "Monarchical Urals"
