--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -98,7 +98,7 @@
  BLR_mi_8: "米-8"
  BLR_mi_8_desc: "米-8是20世纪60年代初由M.L.米尔的实验设计局（OKB）研发的苏联多用途直升机。Mi-8及其改进是世界上最大的双引擎直升机，是航空史上最大型的直升机。它在全世界50多个国家被广泛使用执行各种民用和军事任务。Mi-8型直升机通常都有两用，如类型证明所示；在俄罗斯，具有军事用途的直升机只能由罗斯特克公司（Rosboronuters）公司出售。所有其他免费出售的直升机只有民用用途。"
  BLR_mig_25: "米格-25"
- BLR_mig_25_desc: "米格-25是20世纪60年代米科扬-古列维奇设计局设计的一款苏联高空双引擎军用飞机，其为第3代战斗机、拦截机、侦察机和战术轰炸机。"
+ BLR_mig_25_desc: "米格-25是20世纪60年代米高扬-古列维奇设计局设计的一款苏联高空双引擎军用飞机，其为第3代战斗机、拦截机、侦察机和战术轰炸机。"
  BLR_T72_BME: "T72-BME"
  BLR_T72_BME_desc: "我们可以自己对 T-72 进行很好的改进。"
  BLR_BM21a_Belgrade: "BM-21A 贝尔格莱德"
