--- a/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
@@ -717,7 +717,6 @@
  SPR_endorse_eu_regulations: "支持欧盟条例"
  SPR_endorse_eu_regulations_desc: "维持并支持欧盟的法规将会使得我们同欧洲大陆的联系受益良多。"
  SPR_nuclear_acceptance_campaign: "核接受运动"
- SPR_nuclear_acceptance_campaign_sec: "与核反对派作斗争可以为我们的绿色倡议带来动力。最后，从中受益的是西班牙人民。"
  SPR_Armonia_con_la_naturaleza: "与自然和谐相处"
  SPR_Armonia_con_la_naturaleza_desc: "让我们让人们希望保护自己国家的国家自然。如果我们掠夺了它，那么就没有一个天然的西班牙。"
  SPR_economia_espanola: "西班牙经济"
@@ -1848,3 +1847,4 @@
  SPR_visited_ceuta: "访问过休达与梅利利亚"
  SPR_decommodify_the_basics_idea: "基础用品去商品化"
  SPR_decommodify_the_basics_idea_desc: "基础用品不应被视为商品。它是一种基本用品，应如此对待。"
+ SPR_nuclear_acceptance_campaign_desc: "打击核反对派可以推动我们的绿色倡议。最终受益的是西班牙人民。"
