--- a/localisation/polish/replace/replaced_from_focus_filter_tag_l_polish.yml
+++ b/localisation/polish/replace/replaced_from_focus_filter_tag_l_polish.yml
@@ -111,6 +111,6 @@
  FOCUS_FILTER_ISRPALSTUFF: "Izrael-Palestyna"
  FOCUS_FILTER_ISRPOLICE: "Mišteret Yisra'el"
  FOCUS_FILTER_ISRECON: "Gospodarka Izraela"
- FOCUS_FILTER_URAL_TRANSFORMATION: "Transformation of Ural"
- FOCUS_FILTER_URAL_RNE: "Russian National Unity"
- FOCUS_FILTER_URAL_MONARCHY: "Monarchical Urals"
+ FOCUS_FILTER_URAL_TRANSFORMATION: "Transformacja Uralu"
+ FOCUS_FILTER_URAL_RNE: "Rosyjska Jedność Narodowa"
+ FOCUS_FILTER_URAL_MONARCHY: "Monarchiczny Ural"
