--- a/localisation/english/MD_focus_TUR_l_english.yml
+++ b/localisation/english/MD_focus_TUR_l_english.yml
@@ -1131,6 +1131,8 @@
  TUR_train_units: "Last Minute Briefing"
  TUR_train_units_desc: "We can give our units a last minute briefing on the operation, and it's risks.\n§W-----------------------------------------------------------------§!\nThis decision will be §RUNAVAILABLE§! for §H360 Days§! upon activation."
  TUR_van_pre_op_strike: "Pre-Operation Strikes on Van"
+ TUR_launch_attack_PKK_VAN: "Order Attacks Against PKK in Van"
+ TUR_launch_attack_PKK_VAN_desc: "We can give the greenlight to our troops to launch the necessary attacks against the PKK in Van to root the insurgents out."
  TUR_PKK_VAN_BASE: "Van"
  TUR_PKK_VAN_BASE_STRENGTH: "[?TUR_PKK_BASE_MANPOWER]"
  TUR_PKK_VAN_EFFECTIVENESS: "[?TUR_current_effectiveness]%"
@@ -1746,10 +1748,21 @@
  TUR_pkk.204.a: "Arrest the ring-leaders"
  TUR_pkk.204.b: "Use the movement to our advantage"
  TUR_pkk.204.c: "Pass laws to weaken their movements"
+ TUR_pkk.205.t: "PKK Forces Retreat into Armenia"
+ TUR_pkk.205.d: "PKK fighters that were engaged with our own troops have crossed the border into Armenia, even attacking and holding some Armenian border guards hostage. There are a few who are still trying to flee from the enagagement with our troops, but we now have to make a decision to either send reinforcements and prepare to cross the border or continue the fight against the ones who are still trying to flee."
+ TUR_pkk.205.a: "Abandon the operation entirely"
+ TUR_pkk.205.b: "Focus on those still here"
+ TUR_pkk.205.c: "Go after them!"
 
  TUR_pkk.206.t: "Turkish Forces Suffer Defeat"
  TUR_pkk.206.d: "Reports from the Turkish-Armenian border are suggesting that the Turkish combatants are retreating back into Turkey after being unable to capture PKK operatives that fled to Armenia. Armenian officials have repeated that they did not shelter the PKK, but rather it was an unexpected intrusion, and that the captured PKK fighters will be dealt with."
  TUR_pkk.206.a: "Okay"
+ TUR_pkk.207.t: "Armenian Forces Stand Down"
+ TUR_pkk.207.d: "Following a series of successful attacks against Armenian guards on the border, the units stationed there have agreed to stand down and allow the capture of PKK fighters that fled into Armenia from the Eastern Turkish border."
+ TUR_pkk.207.a: "Okay"
+ TUR_pkk.208.t: "Turkish and Armenian Forces Agree to Ceasefire"
+ TUR_pkk.208.d: "Following a series of clashes between Armenian and Turkish border guards, both sides have agreed to lay down their arms and agreed to a ceasefire."
+ TUR_pkk.208.a: "Okay"
 
  Turkey.1.t: "Özkan Forms a New Party"
  Turkey.1.desc: "After [ROOT.GetLeader] publically called out the deputy Prime Minister, Özkan announced that he was resigning from his position in the parliament and in the party. He also announced that he would be forming a new party, the New Turkey Party. Many current §W[socialism_L]§! MPs have already announced intention of joining him, and many are also trying to join the §W[conservatism_L]§!."
@@ -2273,7 +2286,7 @@
  investment_propaganda_2: "Unemployment Effort"
  investment_propaganda_2_desc: "Hungry people tend to become criminals. Former governments ignored the eastern regions and didn't cared about the problems that caused the Kurds to feel oppressed. We need to better than the ones before us."
  TUR_military_category: "Turkish Armed Forces"
- TUR_military_category_desc: "\n£TUR_desctext_TSK\n\n\n\n\nThe Turkish military has intervened in Turkish politics more than once. Whenever they have felt their own or Turkey's existence threatened, they have organised (or tried to organise) a coup. Quite often this has stemmed from the Turkish government drifting away from secularism, and sometimes from economic troubles seemingly caused by the government.\n\nIf your §YStanding§! with the [TUR.Nat_Autocracy_L] falls below §Y0§!, the Armed Forces will take action to depose the government.\n\nOur current §YStanding§!: [?TUR_military_standing_value|0+]\n\n[?TUR_military_standing_party|=0+] from our current §YRuling Party§!\n[?TUR_military_standing_conservatism|=0+] from £pol_idea §GSocial Conservatism - Government§!\n[?TUR_military_standing_opinion|=0+] from §YThe Military§! Current Opinion\n[?TUR_military_standing_corruption|=0+] from our §YCorruption Level§!\n[?TUR_military_standing_economy|=0+] from our §YEconomic Cycle§!\n[?TUR_military_standing_interest_rate|=0+] from our §YInterest Rate§!"
+ TUR_military_category_desc: "\n£TUR_desctext_TSK\n\n\n\n\nThe Turkish military has intervened in Turkish politics more than once. Whenever they have felt their own or Turkey's existence threatened, they have organised (or tried to organise) a coup. Quite often this has stemmed from the Turkish government drifting away from secularism, and sometimes from economic troubles seemingly caused by the government.\n\nIf your §YStanding§! with the [TUR.Nat_Autocracy_L] falls below §Y0§!, the Armed Forces will take action to depose the government.\n\nOur current §YStanding§!: [?TUR_military_standing_value|0+]\n\n[?TUR_military_standing_party|=0+] from our current §YRuling Party§!\n[?TUR_military_standing_conservatism|=0+] from our §HSocial Conservatism - Government§!\n[?TUR_military_standing_opinion|=0+] from our §YMilitary's§! Current Opinion\n[?TUR_military_standing_corruption|=0+] from our §YCorruption Level§!\n[?TUR_military_standing_economy|=0+] from our §YEconomic Cycle§!\n[?TUR_military_standing_interest_rate|=0+] from our §YInterest Rate§!"
  TUR_misak_mili: "Misak-ı Millî"
  TUR_misak_mili_desc: "\n£TUR_desctext_misak\n\n\n\n\n§HMisak-ı Millî§! (National Pact) was a set of six decisions passed by the parliament in the 1920's. Vitalized primarily after the destruction of the [TUR.GetFlag] Ottoman Empire at the hands of the Entente, the §HNational Pact§! sought out to restore some of Turkey's lost glory, and it's lands. However the decisions were not followed through with due to the [TUR.GetFlag] Turkish war of independence and the establishment of the [TUR.GetFlag] Turkish Republic by Mustafa Kemal Ataturk. However the concept and ideals of the §HNational Pact§! still resonates within many [TUR.GetFlag] Turkish nationalists in the modern day, despite it's lack of wide-spread support in the national populus."
  TUR_armenian_integration: "[ARM.GetFlag] Return to Armenia"
