--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -331,3 +331,27 @@
  HOL_ING_Group_strategy_category: "ING Group Strategies"
  HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
  HOL_ING_Group_Strategy_upgrade_in_progress_flag: "ING Strategy Deployed"
+ HOL_ING_Group_Strategies_Expansion_GER: "Deutsche ING"
+ HOL_ING_Group_Strategies_Expansion_GER_desc: "Germany has been a core market for ING, with significant investments in retail banking and corporate finance. Expanding ING's operations here will further solidify its position in the European banking sector."
+ HOL_ING_Group_Strategies_Expansion_POL: "ING Bank Śląski"
+ HOL_ING_Group_Strategies_Expansion_POL_desc: "ING has established a strong presence in Poland through ING Bank Śląski. Expanding further in this rapidly growing market will enhance ING’s influence in Central and Eastern Europe."
+ HOL_ING_Group_Strategies_Expansion_AST: "ING Direct Australia"
+ HOL_ING_Group_Strategies_Expansion_AST_desc: "Australia’s innovation-driven economy offers ING the chance to lead in digital banking and research. Expanding operations in Australia will drive ING’s technological growth and solidify its position as a leader in fintech."
+ HOL_ING_Group_Strategies_Expansion_SPR: "ING España"
+ HOL_ING_Group_Strategies_Expansion_SPR_desc: "Spain is a dynamic market for digital banking and infrastructure investments. By increasing its presence in Spain, ING can capitalize on growing urban development and improve its construction financing portfolio."
+ HOL_ING_Group_Strategies_Expansion_ITA: "ING Italia"
+ HOL_ING_Group_Strategies_Expansion_ITA_desc: "Italy offers a mature financial market with opportunities for growth in corporate banking. Expanding to Italy will help ING establish a stronger foothold in Southern Europe and boost economic growth rates."
+ HOL_ING_Group_Strategies_Expansion_TUR: "ING Bank Turkey"
+ HOL_ING_Group_Strategies_Expansion_TUR_desc:  "Turkey’s strategic position between Europe and Asia presents a unique opportunity for ING to expand its trade and financial influence. By investing in Turkey, ING can significantly increase its trade-related financial operations."
+ HOL_ING_Group_Strategies_Expansion_USA: "ING U.S. Investment Management"
+ HOL_ING_Group_Strategies_Expansion_USA_desc: "The United States, as the world’s largest economy, offers immense opportunities for ING, particularly in investment management. Expanding into the U.S. will secure ING’s role as a major global player in asset management."
+ HOL_ING_Group_Strategies_Expansion_ROM: "ING Bank Romania"
+ HOL_ING_Group_Strategies_Expansion_ROM_desc: "Romania’s emerging market provides ING with the opportunity to support infrastructure and economic development. Further investment in Romania will increase ING's influence in Eastern Europe’s growing financial sector."
+ HOL_ING_Group_Strategies_Expansion_Speciality1: "ING Digital First"
+ HOL_ING_Group_Strategies_Expansion_Speciality1_desc: "With the world increasingly moving towards digital solutions, ING can secure its position as a leader in digital banking through the Digital First strategy. Specializing in this area will improve cyber security, reduce transaction costs, and enhance digital banking efficiency."
+ HOL_ING_Group_Strategies_Expansion_Speciality2: "ING Terra Approach"
+ HOL_ING_Group_Strategies_Expansion_Speciality2_desc: "With a commitment to aligning its investments with global climate goals, ING’s Terra Approach focuses on financing green energy projects and sustainable development. Specializing in sustainable finance will boost green energy output and attract environmentally conscious investments."
+ HOL_ING_Group_Strategies_Expansion_Speciality3: "ING Wholesale Banking"
+ HOL_ING_Group_Strategies_Expansion_Speciality3_desc: "Corporate clients are a key focus of ING’s business. By specializing in wholesale banking, ING will enhance its ability to offer customized financial solutions to large enterprises, driving corporate growth and revenue."
+ HOL_ING_Group_Strategies_Expansion_Speciality4: "ING Wealth Services"
+ HOL_ING_Group_Strategies_Expansion_Speciality4_desc: "Wealth management offers high returns and long-term client relationships. Specializing in wealth management will allow ING to cater to high-net-worth individuals, increasing wealth income taxation and broadening its personal finance services."
