--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -114,6 +114,30 @@
  HOL_Project_Beethoven_desc: "With a focus on bolstering the tech sector's growth within the Netherlands, Project Beethoven emerges as a strategic response to concerns raised by industry leaders, including ASML, regarding the country's investment climate. This ambitious initiative, backed by a significant government investment of over 2.5 billion euros, aims to cultivate an environment conducive to domestic expansion for tech giants like ASML, reinforcing the nation's position as a global innovation hub."
  HOL_Phillips_Healthcare_Expansion: "Phillips Healthcare Expansion"
  HOL_Phillips_Healthcare_Expansion_desc: "Philips Healthcare Expansion reflects the Netherlands' leadership in healthcare technology and innovation. By expanding its healthcare portfolio, Philips reaffirms its commitment to improving patient outcomes and advancing medical solutions worldwide."
+ HOL_Oranje_Nassau: "Reactivate Oranje-Nassau Mines"
+ HOL_Oranje_Nassau_desc: "The reactivation of Oranje-Nassau Mines breathes new life into Dutch mining heritage, fostering economic growth and job creation in local communities. This initiative highlights the Netherlands' efforts to leverage its natural resources responsibly while preserving its industrial legacy."
+ HOL_South_Dakota: "DSM Bio-Ethanol Factories in South Dakota"
+ HOL_South_Dakota_desc: "DSM Bio-Ethanol Factories in South Dakota signify Dutch leadership in sustainable energy solutions. By investing in bioethanol production, DSM contributes to reducing carbon emissions and promoting renewable energy sources on a global scale."
+ # Trade & Water
+ HOL_Dutch_Legends: "Dutch Legends"
+ HOL_Dutch_Legends_desc: "Throughout history, the Netherlands has cultivated a legendary legacy, blending tales of water mastery with narratives of maritime trade. From the legendary feats of Dutch engineers reclaiming land from the sea to the daring exploits of Dutch merchants navigating distant waters, these legends intertwine resilience, ingenuity, and prosperity."
+ HOL_Trade_Infrastructure: "Modernize Trade Infrastructure"
+ HOL_Trade_Infrastructure_desc: "The Netherlands boasts a finely tuned trade infrastructure, weaving together ports, canals, and roadways to create a seamless network of commerce. However, as global trade evolves and demands increase, this infrastructure requires modernization to maintain its competitive edge. Investing in cutting-edge technologies and upgrading transport routes will ensure that the Netherlands remains a key player in international trade for decades to come."
+ HOL_Maasvlakte2: "Build Maasvlakte 2"
+ HOL_Maasvlakte2_desc: "The Netherlands undertakes the ambitious Maasvlakte 2 project, reclaiming land from the sea to expand port facilities and stimulate economic growth, echoing the country's historic mastery of water management and engineering."
+ HOL_European_Railway_Development: "European Railway Developments"
+ HOL_European_Railway_Development_desc: "Building on its legacy of innovative transportation infrastructure, the Netherlands spearheads European railway developments, fostering connectivity, trade, and mobility across the continent through its advanced rail network."
+ HOL_Green_Harbor_Amsterdam: "Green Harbor of Amsterdam"
+ HOL_Green_Harbor_Amsterdam_desc: "Amsterdam transforms its harbor into a sustainable hub, embracing eco-friendly practices and renewable energy initiatives, showcasing the Dutch commitment to environmental stewardship and maritime innovation."
+ HOL_Green_Harbor_Amsterdam_tt: "§HWest-Nederland§! Receives §H40 Productivity§!"
+ HOL_Nederland_Maritiem_Land: "Sitchting Nederland Maritiem Land"
+ HOL_Nederland_Maritiem_Land_desc: "The establishment of Stichting Nederland Maritiem Land underscores the Netherlands' maritime heritage and industry leadership, promoting collaboration and advancement within the maritime sector to ensure its continued prosperity and global competitiveness."
+ HOL_Schiphol_Expansion: "Schiphol Expansion"
+ HOL_Schiphol_Expansion_desc: "Schiphol Expansion marks a pivotal moment in Dutch aviation, propelling Amsterdam's airport into the forefront of global travel. By accommodating increased capacity and enhancing passenger experience, this expansion underscores the Netherlands' commitment to air travel efficiency and connectivity."
+ HOL_Digital_Customs: "Digital Customs"
+ HOL_Digital_Customs_desc: "Digital Customs revolutionizes Dutch trade operations, streamlining processes and enhancing efficiency through innovative digital solutions. This initiative epitomizes the Netherlands' embrace of technological advancement to bolster its position as a global trade hub."
+ HOL_DAF_Investments: "Invest in DAF"
+ HOL_DAF_Investments_desc: " DAF Investments signify the Dutch automotive industry's commitment to innovation and growth. Through strategic investments and advancements in technology, DAF reinforces its position as a leading manufacturer of commercial vehicles, driving forward Dutch industrial prowess."
  ###Military
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
@@ -326,7 +350,31 @@
  HOL.Provincial_Railways.306.a: "Only Reconstruct Maastricht Station"
  HOL.Provincial_Railways.306.b: "Use Funds to invest in the Amsterdam - Maastricht Line"
  HOL.Provincial_Railways.306.c: "They really hate reliable trains"
-
+ HOL_DSM.t: "Netherlands Invest in our Bioethanol Production"
+ HOL_DSM.d: "A new chapter in sustainable energy development begins as the Dutch multinational DSM establishes bio-ethanol factories in South Dakota. Utilizing advanced bio-engineering technology, these factories will transform the state’s rich agricultural output into bio-ethanol, a renewable energy source aimed at reducing carbon emissions and reliance on fossil fuels. This initiative not only strengthens South Dakota’s energy infrastructure but also creates numerous jobs in the region. DSM’s investment highlights growing economic collaboration between the Netherlands and the United States, marking a significant step forward in the global shift towards clean energy."
+ HOL_DSM.a: "Good for the Dutch"
+ HOL.Railway_Developments.1.t: "Proposal for High-Speed Rail Collaboration: Amsterdam-Brussels (HSL Zuid)"
+ HOL.Railway_Developments.1.d: "The Netherlands is proposing a joint infrastructure project with Belgium to build the High-Speed Rail Zuid (HSL Zuid), connecting Amsterdam to Brussels. This project will reduce travel time significantly, bolster economic ties between our countries, and create a modern rail corridor that enhances regional connectivity. The Netherlands is eager to work together with Belgium on this transformative endeavor. Will Belgium join us in creating this high-speed link?"
+ HOL.Railway_Developments.1.a: "Join the Netherlands in Building the HSL Zuid"
+ HOL.Railway_Developments.1.b: "Decline the Collaboration on HSL Zuid"
+ HOL.Railway_Developments.1b.t: "Belgium Declines HSL Zuid Collaboration"
+ HOL.Railway_Developments.1b.d: "Belgium has unfortunately decided not to collaborate on the High-Speed Rail Zuid (HSL Zuid) project. Despite this setback, the Netherlands faces a decision: should we proceed with the HSL Zuid project up to the Belgian border, or scrap the plan entirely? Building the high-speed link to the border could still enhance regional transport and lay the groundwork for future collaboration, but it will require significant investment."
+ HOL.Railway_Developments.1b.a: "Build the HSL Zuid to the Border"
+ HOL.Railway_Developments.1b.b: "Scrap the HSL Zuid Project"
+ HOL.Railway_Developments.1c.t: "Belgium Accepts HSL Zuid Collaboration"
+ HOL.Railway_Developments.1c.d: "Belgium has agreed to join the Netherlands in the construction of the High-Speed Rail Zuid (HSL Zuid), connecting Amsterdam to Brussels. This collaborative project will greatly improve regional connectivity, reduce travel times, and strengthen the economic and cultural ties between our nations. With both countries committed to this venture, the construction of the high-speed rail line is set to begin, marking a new era in European transport."
+ HOL.Railway_Developments.1c.a: "Begin Construction of the HSL Zuid"
+ HOL.Railway_Developments.2.t: "Proposal for Betuwelijn Extension to Germany"
+ HOL.Railway_Developments.2.d: "The Netherlands proposes extending the Betuwelijn, a key freight rail line, into Germany to improve trade and transport efficiency between our two nations. This extension would strengthen economic ties and create a more efficient route for goods, bolstering the economic growth of both the Netherlands and Germany. Will Germany agree to collaborate on this important infrastructure project?"
+ HOL.Railway_Developments.2.a: "Work with the Netherlands on the Betuwelijn Extension"
+ HOL.Railway_Developments.2.b: "Decline the Betuwelijn Extension Project"
+ HOL.Railway_Developments.2b.t: "Germany Declines Betuwelijn Collaboration"
+ HOL.Railway_Developments.2b.d: "Germany has decided not to collaborate on the Betuwelijn extension project. Despite this, the Netherlands must now decide whether to extend the freight rail line to the German border or abandon the project entirely. Completing the line to the border could still enhance domestic freight transport and position the Netherlands for future trade growth."
+ HOL.Railway_Developments.2b.a: "Build the Betuwelijn to the German Border"
+ HOL.Railway_Developments.2b.b: "Scrap the Betuwelijn Extension Project"
+ HOL.Railway_Developments.2c.t: "Germany Accepts Betuwelijn Collaboration"
+ HOL.Railway_Developments.2c.d: "Germany has agreed to work with the Netherlands on extending the Betuwelijn. This freight rail connection will significantly improve trade routes between the two countries, allowing for faster and more efficient movement of goods. With both nations committed to the project, construction will soon begin, marking a major step forward in regional trade and transport."
+ HOL.Railway_Developments.2c.a: "Begin Construction of the Betuwelijn Extension"
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
  HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
