--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -138,6 +138,15 @@
  HOL_Digital_Customs_desc: "Digital Customs revolutionizes Dutch trade operations, streamlining processes and enhancing efficiency through innovative digital solutions. This initiative epitomizes the Netherlands' embrace of technological advancement to bolster its position as a global trade hub."
  HOL_DAF_Investments: "Invest in DAF"
  HOL_DAF_Investments_desc: " DAF Investments signify the Dutch automotive industry's commitment to innovation and growth. Through strategic investments and advancements in technology, DAF reinforces its position as a leading manufacturer of commercial vehicles, driving forward Dutch industrial prowess."
+ HOL_DAF_Investments_tt: "§HZuid-Nederland§! Receives §H15 Productivity§!"
+ HOL_Rijkswaterstaat: "Rijkswaterstaat"
+ HOL_Rijkswaterstaat_desc: "Rijkswaterstaat, the Dutch government agency responsible for water management and infrastructure, plays a pivotal role in shaping the nation's water landscape, overseeing the maintenance of waterways, dikes, and flood defenses, safeguarding the Netherlands against the threat of flooding and ensuring the efficient and sustainable use of water resources."
+ HOL_Deltawerken_Modernization: "Deltawerken Modernization"
+ HOL_Deltawerken_Modernization_desc: "The Netherlands modernizes its iconic Deltawerken, reinforcing coastal defenses and adapting to rising sea levels and changing climate patterns, ensuring continued protection against flooding and safeguarding the Dutch coastline for future generations."
+ HOL_Ruimte_Voor_De_Rivier: "Ruimte voor de Rivier"
+ HOL_Ruimte_Voor_De_Rivier_desc: "Embracing a proactive approach to flood risk management, the Netherlands implements the Room for the River project, creating space along riverbanks to accommodate water surges and protect urban areas, showcasing Dutch ingenuity in water-centric urban planning."
+ HOL_Green_Water_City_Building: "Green Water City Building"
+ HOL_Green_Water_City_Building_desc: "Embracing a vision of sustainable urban development, the Netherlands pioneers Green Water City Building initiatives, integrating water-sensitive design principles and nature-based solutions into urban planning and infrastructure projects to create resilient, livable cities that harmonize with the natural environment, embodying Dutch commitment to green growth and environmental stewardship."
  ###Military
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
